# Confidence-Sidecar

./: .env.example  .gitignore  README.md  pyproject.toml
sidecar/: config.py  main.py
sidecar/calibration/: engine.py  platt.py
sidecar/middleware/: auth.py
sidecar/models/: feedback.py  openai.py  trace.py
sidecar/providers/: anthropic.py  base.py  openai.py
sidecar/routers/: calibration.py  feedback.py  proxy.py  traces.py
sidecar/signals/: combiner.py  logprob_entropy.py  semantic_entropy.py  stop_reason.py
sidecar/storage/: database.py  feedback_repo.py  trace_repo.py
sidecar/storage/migrations/: 001_initial.sql  002_calibration.sql  003_trace_calibration_fields.sql
sidecar/streaming/: sse_emitter.py  sse_parser.py
tests/: conftest.py
tests/fixtures/: openai_response.json  openai_stream_chunks.txt
tests/integration/: test_calibration_api.py  test_proxy_nonstreaming.py  test_proxy_streaming.py  test_traces_api.py
tests/unit/: test_auth.py  test_combiner.py  test_logprob_entropy.py  test_request_hash.py  test_sse_parser.py  test_stop_reason.py
