[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confidence-sidecar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
tier1 = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]
calibration = [
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]
